# SilnikZTGK

./: .gitignore  CMakeLists.txt  README.md  SilnikZTGK.sln  UpgradeLog.htm  msbuild_log.txt  vcpkg.json
SilnikZTGK/: Application.cpp  Application.h  Camera.h  Input.cpp  Input.h  Layer.h  Model.h  Shader.h  SilnikZTGK.vcxproj  SilnikZTGK.vcxproj.filters  Window.cpp  Window.h  gettingStarted.cpp  glad.c  lightCubeShader.vs  main.cpp  news_cache.json  shader.frag  shader.vs
SilnikZTGK/Builds/CookingStation_Dystrybucja/: shaders.pak
SilnikZTGK/CookingStation/: Application.cpp  Application.h  example.json  main.cpp  modelsLib.json
SilnikZTGK/CookingStation/AssetLayer/: AssetLayer.cpp  AssetLayer.h  AssetManager.h
SilnikZTGK/CookingStation/Assets/: analiza.json  ananas.json  bvhbhvuyvu.json  example.json  main.py  miau.json  modelsLib.json  news_cache.json  saved.json  test1.json  wygenerowane_quests.json
SilnikZTGK/CookingStation/CameraLayer/: CameraLayer.cpp  CameraLayer.h
SilnikZTGK/CookingStation/Core/: Application.cpp  Application.h  AudioEngine.cpp  AudioEngine.h  GameProgress.h  GraphicsSettings.h  GridSystem.h  Input.cpp  Input.h  Layer.h  Physics.h  ProfileTimer.h  Texture.cpp  Texture.h  Texture_GUI.cpp  Timestep.h  Window.cpp  Window.h
SilnikZTGK/CookingStation/Events/: EditorEvents.h  Event.h  EventBus.h  GameEvents.h  GamepadEvent.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
SilnikZTGK/CookingStation/Math/: Geometry.cpp  Geometry.h
SilnikZTGK/CookingStation/Renderer/: Buffer.cpp  Buffer.h  (+17 more)
SilnikZTGK/Events/: KeyEvent.h
SilnikZTGK/glad/: glad.h
(+293 files in other folders)
